Java虚拟机更细